Fix up scheduler and add nose dependency

--- a/master.cfg
+++ b/master.cfg
@@ -1940,27 +1940,27 @@ test_commands = [
 build_hour = 12
 find_links = [
     'https://d9a97980b71d47cde94d-aae005c4999d7244ac63632f8b80e089.ssl.cf2.rackcdn.com']
-pip_installs = ['numpy', 'scipy', 'scikit-learn', 'numexpr', 'pandas']
+pip_installs = ['nose', 'numpy', 'scipy', 'scikit-learn', 'numexpr', 'pandas']
 for py_version in '2.7', '3.4', '3.5':
     for suffix, slavenames in (('debian', linux_64_slaves),
                                ('fedora', fedora_slaves)):
         builder_name='manylinux-{0}-{1}'.format(py_version, suffix)
         c['builders'].append(BuilderConfig(
             name=builder_name,
-            slavenames=osx_wheel_slaves,
+            slavenames=slavenames,
             factory = PipInstaller(pip_installs,
                                    python='/usr/bin/python' + py_version,
                                    test_commands = test_commands,
                                    find_links = find_links).factory()))
-    sched_name = builder_name + '-scheduler'
-    c['schedulers'].append(timed.Nightly(
-                    name=builder_name + '-scheduler',
-                    branch=None,
-                    builderNames=[builder_name],
-                    change_filter=None,
-                    hour=build_hour,
-                    minute=0,
-                    onlyIfChanged=False))
+        sched_name = builder_name + '-scheduler'
+        c['schedulers'].append(timed.Nightly(
+                        name=builder_name + '-scheduler',
+                        branch=None,
+                        builderNames=[builder_name],
+                        change_filter=None,
+                        hour=build_hour,
+                        minute=0,
+                        onlyIfChanged=False))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
@@ -2121,8 +2121,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 180)
-    assert(len(c['schedulers']) == 249)
+    assert(len(c['builders']) == 186)
+    assert(len(c['schedulers']) == 261)
     # print [sc.name for sc in c['schedulers']]
 
 
