Fix error return from numpy etc testing

--- a/master.cfg
+++ b/master.cfg
@@ -1813,10 +1813,12 @@ class CleanInstaller(PipInstaller):
 
 
 def simple_tester(pkg_name, extra_args=''):
+    """ A simpler version of nptest_command """
     return ['python', '-c',
             'import sys; '
             'import {pkg_name}; '
-            'sys.exit(not {pkg_name}.test({extra_args}))'.format(
+            'result = {pkg_name}.test({extra_args}, verbose=3); '
+            'sys.exit(not result.wasSuccessful())'.format(
                 pkg_name=pkg_name,
                 extra_args=extra_args)]
 
@@ -1937,7 +1939,7 @@ test_commands = [
     ['nosetests', 'sklearn']
 ]
 
-build_hour = 12
+build_hour = 5
 find_links = [
     'https://d9a97980b71d47cde94d-aae005c4999d7244ac63632f8b80e089.ssl.cf2.rackcdn.com']
 pip_installs = ['nose', 'numpy', 'scipy', 'scikit-learn', 'numexpr', 'pandas']
