Add Windows 2016 scheduler

--- a/master.cfg
+++ b/master.cfg
@@ -143,6 +143,7 @@ osx_yosemite_slaves = ['mac-pro']
 win7_32_slaves = ['win7-32-mini']
 win7_64_slaves = ['win-2008-64']
 win10_64_slaves = ['win10']
+win2016_slaves = ['win2016']
 arm_slaves = ['arm-raspberry-pi']
 fedora_slaves = ['i20-fed19']
 osx_wheel_slaves = ['osx-10.6-clean']
@@ -973,6 +974,7 @@ c['schedulers'] = sum([
     dipy_bot.nightly_scheduler(['dipy-bdist64-27'], 'dipy-win64-whl-27', 3, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist64-35'], 'dipy-win64-whl-35', 4, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist64-35-win10'], 'dipy-win64-whl-35-win10', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist64-35-win2016'], 'dipy-win64-whl-35-win2016', 3, 10, True),
     # OSX nightlies
     dipy_bot.nightly_scheduler(['dipy-bdist-whl-2.7'], 'dipy-osx-whl-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-whl-3.3'], 'dipy-osx-whl-33', 3, 30, True),
@@ -1225,6 +1227,16 @@ c['builders'].append(BuilderConfig(
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
         python=r'c:\Python35\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist64-35-win2016',
+    slavenames=win2016_slaves,
+    factory=dipy_bot.bdist_factory(
+        'whl',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds=dipy_pre_build,
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python35-x64\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-33',
