Extend nibabel timeout for raspberry pi

--- a/master.cfg
+++ b/master.cfg
@@ -691,7 +691,8 @@ nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    pip_depends = ('nose', 'sympy', 'nibabel')
+    pip_depends = ('nose', 'sympy', 'nibabel'),
+    build_timeout = 2400,
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = ['python', '-c',
