Refactor multiple stack builds; add manylinux tester

--- a/master.cfg
+++ b/master.cfg
@@ -1900,7 +1900,7 @@ test_commands = [['nosetests', 'markupsafe'],
 default_requires = WHEEL_SERVER + 'scipy-stats-data-1.0.txt'
 wheel_requires = Property('wheel_requires', default_requires)
 build_hour = 11
-for py_version in '2.7.6', '3.3.5', '3.4.1':
+for py_version in '2.7.11', '3.4.3', '3.5.1':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
                                     ((WHEEL_SERVER,), True, 'pre')):
@@ -1966,26 +1966,28 @@ test_commands = [
     ['nosetests', '-e', 'test_vcomp_2', '--verbosity=3', 'statsmodels'],
 ]
 
-for py_version in '2.7', '3.4', '3.5':
-    for suffix, slavenames in (('debian', linux_64_slaves),
-                               ('fedora', fedora_slaves)):
-        builder_name='manylinux-{0}-{1}'.format(py_version, suffix)
-        c['builders'].append(BuilderConfig(
-            name=builder_name,
-            slavenames=slavenames,
-            factory = PipInstaller(pip_installs,
-                                   python='/usr/bin/python' + py_version,
-                                   test_commands = test_commands,
-                                   find_links = find_links).factory()))
-        sched_name = builder_name + '-scheduler'
-        c['schedulers'].append(timed.Nightly(
-                        name=builder_name + '-scheduler',
-                        branch=None,
-                        builderNames=[builder_name],
-                        change_filter=None,
-                        hour=build_hour,
-                        minute=0,
-                        onlyIfChanged=False))
+SUFF2SLAVES=dict(debian=linux_64_slaves, fedora=fedora_slaves)
+
+for py_version, suffix in (('2.7', 'debian'), ('3.4', 'debian'),
+                           ('3.5', 'debian'), ('2.7', 'fedora')):
+    slavenames = SUFF2SLAVES[suffix]
+    builder_name='manylinux-{0}-{1}'.format(py_version, suffix)
+    c['builders'].append(BuilderConfig(
+        name=builder_name,
+        slavenames=slavenames,
+        factory = PipInstaller(pip_installs,
+                               python='/usr/bin/python' + py_version,
+                               test_commands = test_commands,
+                               find_links = find_links).factory()))
+    sched_name = builder_name + '-scheduler'
+    c['schedulers'].append(timed.Nightly(
+                    name=builder_name + '-scheduler',
+                    branch=None,
+                    builderNames=[builder_name],
+                    change_filter=None,
+                    hour=build_hour,
+                    minute=0,
+                    onlyIfChanged=False))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
@@ -2146,8 +2148,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 186)
-    assert(len(c['schedulers']) == 261)
+    assert(len(c['builders']) == 185)
+    assert(len(c['schedulers']) == 259)
     # print [sc.name for sc in c['schedulers']]
 
 
