Add narrow unicode build

--- a/master.cfg
+++ b/master.cfg
@@ -1947,7 +1947,8 @@ for py_version in '2.7.11', '3.4.3', '3.5.1':
                     default=default_requires, size=200)]))
 
 
-
+""" Builders / schedulers for manylinux testing
+"""
 build_hour = 5
 find_links = [
     'http://ccdd0ebb5a931e58c7c5-aae005c4999d7244ac63632f8b80e089.r77.cf2.rackcdn.com']
@@ -1966,20 +1967,21 @@ test_commands = [
     ['nosetests', '-e', 'test_vcomp_2', '--verbosity=3', 'statsmodels'],
 ]
 
-SUFF2SLAVES=dict(debian=linux_64_slaves, fedora=fedora_slaves)
-
-for py_version, suffix in (('2.7', 'debian'), ('3.4', 'debian'),
-                           ('3.5', 'debian'), ('2.7', 'fedora')):
-    slavenames = SUFF2SLAVES[suffix]
-    builder_name='manylinux-{0}-{1}'.format(py_version, suffix)
+for label, slavenames, py_bin in (
+    ('2.7-debian', linux_64_slaves, '/usr/bin/python2.7'),
+    ('3.4-debian', linux_64_slaves, '/usr/bin/python3.4'),
+    ('3.5-debian', linux_64_slaves, '/usr/bin/python3.5'),
+    ('2.7-debian-narrow', linux_64_slaves, '/home/buildslave/.pyenv/versions/2.7.10/bin/python'),
+    ('2.7-fedora', fedora_slaves, '/usr/bin/python2.7'),
+    ):
+    builder_name='manylinux-' + label
     c['builders'].append(BuilderConfig(
         name=builder_name,
         slavenames=slavenames,
         factory = PipInstaller(pip_installs,
-                               python='/usr/bin/python' + py_version,
+                               python=py_bin,
                                test_commands = test_commands,
                                find_links = find_links).factory()))
-    sched_name = builder_name + '-scheduler'
     c['schedulers'].append(timed.Nightly(
                     name=builder_name + '-scheduler',
                     branch=None,
@@ -2148,8 +2150,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 185)
-    assert(len(c['schedulers']) == 259)
+    assert(len(c['builders']) == 186)
+    assert(len(c['schedulers']) == 261)
     # print [sc.name for sc in c['schedulers']]
 
 
