Add 32-bit manylinux tests

--- a/master.cfg
+++ b/master.cfg
@@ -1969,6 +1969,9 @@ test_commands = [
 
 for label, slavenames, py_bin in (
     ('2.7-debian', linux_64_slaves, '/usr/bin/python2.7'),
+    ('2.7-ubuntu-32', linux_32_slaves, '/usr/bin/python'),
+    ('3.4-ubuntu-32', linux_32_slaves, '/home/buildslave/.pyenv/versions/3.4.4/bin/python'),
+    ('3.5-ubuntu-32', linux_32_slaves, '/home/buildslave/.pyenv/versions/3.5.1/bin/python'),
     ('3.4-debian', linux_64_slaves, '/usr/bin/python3.4'),
     ('3.5-debian', linux_64_slaves, '/usr/bin/python3.5'),
     ('2.7-debian-narrow', linux_64_slaves, '/home/buildslave/.pyenv/versions/2.7.10/bin/python'),
@@ -2150,8 +2153,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 186)
-    assert(len(c['schedulers']) == 261)
+    assert(len(c['builders']) == 189)
+    assert(len(c['schedulers']) == 267)
     # print [sc.name for sc in c['schedulers']]
 
 
