Add 3.5 builder for nipy

--- a/master.cfg
+++ b/master.cfg
@@ -874,8 +874,9 @@ c['schedulers'] = sum([
                         'nipy-py2.7-osx-10.7',
                         'nipy-py2.7-osx-10.10',
                         'nipy-py2.7-debian-ppc',
-                        'nipy-py3.4',
                         'nipy-py3.3',
+                        'nipy-py3.4',
+                        'nipy-py3.5-32',
                         'nipy-py2.7-sym0.7.0-nib1.2.0',
                        ]),
     dipy_bot.schedulers(['dipy-py2.6',
@@ -1572,11 +1573,14 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.x-sid-sparc', sparc_slaves_sid)))
 # Python 3s into virtualenv
 c['builders'] += nipy_bot.build_builders(
+    (('nipy-py3.3', osx_snowleopard_slaves),),
+    python='python3.3')
+c['builders'] += nipy_bot.build_builders(
     (('nipy-py3.4', linux_64_slaves),),
     python='python3.4')
 c['builders'] += nipy_bot.build_builders(
-    (('nipy-py3.3', osx_snowleopard_slaves),),
-    python='python3.3')
+    (('nipy-py3.5-32', linux_32_slaves),),
+    python='python3.5')
 # Different versions of Sympy, nibabel
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.7-sym0.7.0-nib1.2.0', osx_yosemite_slaves),),
@@ -2153,8 +2157,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 189)
-    assert(len(c['schedulers']) == 267)
+    assert(len(c['builders']) == 190)
+    assert(len(c['schedulers']) == 268)
     # print [sc.name for sc in c['schedulers']]
 
 
