Add mock to nibabel requirements

--- a/master.cfg
+++ b/master.cfg
@@ -677,7 +677,7 @@ nibabel_bot = GithubBot('nipy', 'nibabel',
     doc_build_cmd = "cd doc && make html",
     doc_pip_depends = ('sphinx', 'texext'),
     built_doc_src = "build/html",
-    pip_depends = ('nose',)
+    pip_depends = ('nose', 'mock')
 )
 nitime_bot = GithubBot('nipy', 'nitime',
     test_cmd = nptest_command('nitime', verbose=None),
@@ -1534,11 +1534,11 @@ c['builders'] += nibabel_bot.build_builders(
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.7-pyd0.9.7', osx_yosemite_slaves),),
     python='python2.7',
-    pip_depends = ('nose', 'pydicom==0.9.7'))
+    pip_depends = ('nose', 'mock', 'pydicom==0.9.7'))
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.7-pyd0.9.8', osx_yosemite_slaves),),
     python='python2.7',
-    pip_depends = ('nose', 'pydicom==0.9.8'))
+    pip_depends = ('nose', 'mock', 'pydicom==0.9.8'))
 # Nitime
 c['builders'] += nitime_bot.build_builders(
     (('nitime-py2.6', linux_64_slaves),
