Add nibabel release checks

--- a/master.cfg
+++ b/master.cfg
@@ -1439,6 +1439,21 @@ def inplace_cmd_factory(bot, commands, **kwargs):
     return factory
 
 c['builders'].append(BuilderConfig(
+    name='nibabel-release-checks',
+    slavenames=['osx-10.6'],
+    factory=inplace_cmd_factory(nibabel_bot,
+        (('python', '-m', 'compileall', '.'),
+         ('make', 'sdist-tests'),
+         ('make', 'check-files'),
+         ('make', 'check-version-info'),
+         ('make', 'source-release'),
+         ('pip', 'install', '.'),
+         ('pip', 'install', '--ignore-installed', 'sphinx'),
+         ('pip', 'install', '-r', 'doc-requirements.txt'),
+         ('make', '-C', 'doc', 'doctest'),
+        ),
+        )))
+c['builders'].append(BuilderConfig(
     name='nipy-release-checks',
     slavenames=['osx-10.6'],
     factory=inplace_cmd_factory(nipy_bot,
@@ -2157,8 +2172,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 190)
-    assert(len(c['schedulers']) == 268)
+    assert(len(c['builders']) == 191)
+    assert(len(c['schedulers']) == 269)
     # print [sc.name for sc in c['schedulers']]
 
 
