Add mock to pip install etc builders

--- a/master.cfg
+++ b/master.cfg
@@ -1508,7 +1508,7 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_yosemite_slaves),),
                 python=pyorg_pybin(pyver),
-                pip_depends = ('nose',), # ditto
+                pip_depends = ('nose', 'mock'),
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
             c['schedulers'] += bot.nightly_scheduler(
