Update Fedora slave name

--- a/master.cfg
+++ b/master.cfg
@@ -145,7 +145,7 @@ win7_64_slaves = ['win-2008-64']
 win10_64_slaves = ['win10']
 win2016_slaves = ['win2016']
 arm_slaves = ['arm-raspberry-pi']
-fedora_slaves = ['i20-fed19']
+fedora_slaves = ['i20-fedora']
 osx_wheel_slaves = ['osx-10.6-clean']
 
 # Locks to prevent resource exhaustion which might need to be defined
