Add scipy as dependency for nipy and dipy

--- a/master.cfg
+++ b/master.cfg
@@ -691,7 +691,7 @@ nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    pip_depends = ('nose', 'sympy', 'nibabel'),
+    pip_depends = ('nose', 'sympy', 'nibabel', 'numpy', 'scipy'),
     build_timeout = 2400,
 )
 dipy_bot = GithubBot('nipy', 'dipy',
@@ -701,7 +701,7 @@ dipy_bot = GithubBot('nipy', 'dipy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'argv = ["", "dipy", "--with-doctest", "--verbosity=3", "--exe"]; '
     'nose.core.TestProgram(argv=argv, addplugins=[doctests.Doctest()])'],
-    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel'),
+    pip_depends = ('nose', 'numpy>=1.7.1', 'cython>=0.18', 'nibabel', 'scipy'),
     build_timeout = 9600, # allow for longer registration builds
 )
 # dipy bot for linux machines with optional pip_depends that
