Update Windows path for carly test

--- a/master.cfg
+++ b/master.cfg
@@ -1238,7 +1238,7 @@ c['builders'].append(BuilderConfig(
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds=dipy_pre_build,
         test_cmd=win32_dipy_test_cmd,
-        python=r'c:\Python35-x64\python.exe')
+        python=r'c:\Python36-64\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-33',
