Update Pythons to test against

--- a/master.cfg
+++ b/master.cfg
@@ -1359,7 +1359,7 @@ for slavenames, bdist_suffix in (
 # Make numpy wheels on 10.9, test on 10.6
 building_slaves = osx_yosemite_slaves
 testing_slaves = osx_snowleopard_slaves
-for py_ver in ('2.7', '3.3', '3.4'):
+for py_ver in ('2.7', '3.5', '3.6'):
     python_exe = pyorg_pybin(py_ver)
     builder_name = 'numpy-bdist-whl-osx-' + py_ver
     tester_name = builder_name + '-downloaded'
@@ -1394,7 +1394,7 @@ for py_ver in ('2.7', '3.3', '3.4'):
             )
     # Upgrade pip to make sure it can use wheels
     factory.addStep(ShellCommand(
-        command=['python', '-m', 'pip', '-U', 'pip'],
+        command=['python', '-m', 'pip', 'install', '-U', 'pip'],
         env=env))
     # pip install bdist file into virtualenv
     factory.addStep(ShellCommand(
