Nightly builds to 3.5, 3.6; increase timeout

--- a/master.cfg
+++ b/master.cfg
@@ -989,8 +989,8 @@ c['schedulers'] = sum([
                                   'whl64-27', 5, 30, True),
     # Numpy binary builders
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-2.7'], 'whl-27', 5, 30, True),
-    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.3'], 'whl-33', 5, 30, True),
-    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.4'], 'whl-34', 5, 30, True),
+    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.5'], 'whl-35', 5, 30, True),
+    numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.6'], 'whl-36', 5, 30, True),
 ]
 
 # Try scheduler defined after builders
@@ -1482,7 +1482,9 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.7',
         "nipy-examples-2.7",
-        pip_depends=('nibabel', 'sympy', 'matplotlib'))
+        pip_depends=('nibabel', 'sympy', 'matplotlib'),
+        timeout=4800,
+)
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-examples-3.4',
@@ -1492,7 +1494,9 @@ c['builders'].append(BuilderConfig(
         '/Library/Frameworks/Python.framework/Versions/3.4',
         "nipy-examples-3.4",
         "python3.4",
-        pip_depends=('nibabel', 'sympy', 'matplotlib'))
+        pip_depends=('nibabel', 'sympy', 'matplotlib'),
+        timeout=4800,
+)
 ))
 # pip and easy_install builders
 hours = 5
