Remove easy_install tests
Who uses easy_install these days?

--- a/master.cfg
+++ b/master.cfg
@@ -1498,33 +1498,31 @@ c['builders'].append(BuilderConfig(
         timeout=4800,
 )
 ))
-# pip and easy_install builders
+# pip pypi builders
 hours = 5
 minutes = 0
 for bot in (nibabel_bot, nipy_bot, dipy_bot):
     for pyver in ('2.7', '3.5'):
         project = bot.repo
-        for install_cmd in (
-                ('pip', 'install', '--ignore-installed', project),
-                ('easy_install', '-U', project)):
-            name_suff =  'py%s-%s' % (pyver, install_cmd[0])
-            builder_name = '%s-%s' % (project, name_suff)
-            c['builders'] += bot.build_builders(
-                ((builder_name, osx_yosemite_slaves),),
-                python=pyorg_pybin(pyver),
-                pip_depends = ('nose', 'mock'),
-                install_cmd = install_cmd,
-                install_wd = 'build/venv')
-            c['schedulers'] += bot.nightly_scheduler(
-                    [builder_name],
-                    name_suff,
-                    hours,
-                    minutes,
-                    True),
-            minutes += 10
-            if minutes == 60:
-                hours += 1
-                minutes = 0
+        install_cmd = ('pip', 'install', '--ignore-installed', project)
+        name_suff =  'py%s-%s' % (pyver, install_cmd[0])
+        builder_name = '%s-%s' % (project, name_suff)
+        c['builders'] += bot.build_builders(
+            ((builder_name, osx_yosemite_slaves),),
+            python=pyorg_pybin(pyver),
+            pip_depends = ('nose', 'mock'),
+            install_cmd = install_cmd,
+            install_wd = 'build/venv')
+        c['schedulers'] += bot.nightly_scheduler(
+                [builder_name],
+                name_suff,
+                hours,
+                minutes,
+                False),  # build regardless of git state
+        minutes += 10
+        if minutes == 60:
+            hours += 1
+            minutes = 0
 
 # Code builders
 c['builders'] += nibabel_bot.build_builders(
@@ -2176,8 +2174,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 191)
-    assert(len(c['schedulers']) == 269)
+    assert(len(c['builders']) == 185)
+    assert(len(c['schedulers']) == 257)
     # print [sc.name for sc in c['schedulers']]
 
 
