Revert "Debug prints for Python / PATH"
This reverts commit faf09bfb06fa3a638c4de29de9218d82f5287004.

--- a/master.cfg
+++ b/master.cfg
@@ -413,13 +413,9 @@ class GithubBot(object):
         # Any pre-building commands
         for cmd in pre_build_cmds:
             factory.addStep(ShellCommand(command=cmd))
-        # Check path, and which python
-        cmd = ['python', '-c', 'import os, sys; print(sys.prefix);'
-               'print(os.environ["PATH"])']
-        factory.addStep(ShellCommand(command=cmd, env=my_env))
         # Add install and runtime dependencies
         do_pip_install(factory, pip_depends, my_env)
-        # Show pip environment
+        # Show pip enviroment
         factory.addStep(ShellCommand(command=['pip', 'freeze'], env=my_env))
         # Work out working directory for install
         if not self.src_subdir is None:
