Add CC=clang to Mikesilver builds

--- a/edu.berkeley.bic.michael.osx-10.6.plist
+++ b/edu.berkeley.bic.michael.osx-10.6.plist
@@ -13,6 +13,8 @@
             <string>/Library/Frameworks/Python.framework/Versions/2.7/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin:/usr/local/git/bin</string>
             <key>MACOSX_DEPLOYMENT_TARGET</key>
             <string>10.6</string>
+            <key>CC</key>
+            <string>clang</string>
         </dict>
 
         <!-- Change this to the user you want to run buildbot as -->
